--- a/old_index.html
+++ b/old_index.html
@@ -94,7 +94,7 @@ and open the template in the editor.
         <!--<a href="Exercise.html" data-role="button">Excercises</a>-->
         </div>
         <div data-role="footer">
-            <a data-icon="check" class="ui-btn-add" onclick="TestModule()" data-rel="dialog">Test</a>
+            <a data-icon="check" class="ui-btn-add" onclick="TestAcc()" data-rel="dialog">Test</a>
         </div>
 	</div>
 
